--- a/talks.html
+++ b/talks.html
@@ -5,6 +5,8 @@ title: Conference Talks
 
 <h2>Conference Talks</h2>
 
+<p>I've spoken at more than 36 events in 14 countries, primarily about Bundler, security, and web development. This list of talks includes links to blog posts, slide decks, and videos wherever possible. If you'd like to invite me to speak at your event, please <a href="mailto:andre+talks@arko.net">contact me directly</a>.</p>
+
 <dl class="talks">
   {% for talk in site.data.talks %}
     <details class="talk">
