update projects, add bundler

--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@ title: Personal Projects
 
 <h2>Personal projects</h2>
 
-<p>Sometimes I do things that seem worth writing down somewhere.</p>
+<p>Sometimes I work on things that seem worth writing down somewhere.</p>
 
 <dl class="projects">
   {% for project in site.data.projects %}
